syntax = "proto3";

package kong.model;

option go_package = "github.com/kong/koko/internal/gen/wrpc/kong/model;model";

message CACertificate {
  string id = 1;
  string cert = 2;
  string cert_digest = 3;
  int64 created_at = 4;
  repeated string tags = 5;
}
